QoL changes & fixes (yayyy)
- Barrier blocks are now placed at the ground after arriving into a dimension, preventing falling back down
- Barrier block is also placed when respawning, meaning that Soul Anchors aren't necessary to be used at dimension start
- Effects now cleared when entering Erebus (clearing Launch effect)
- OP is now automatically given to everyone on a server (needed for run resets)
- Soul Anchor no longer drops on death

--- a/config/corpsecomplex.cfg
+++ b/config/corpsecomplex.cfg
@@ -202,6 +202,7 @@ inventory {
         minecraft:stone_pickaxe
         minecraft:wooden_pickaxe
         minecraft:iron_pickaxe
+        contenttweaker:soul_anchor
      >
 
     # List of items that are always dropped
