--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -30,7 +30,7 @@ general {
         Use a Soul Anchor to set your spawn after arriving in a new dimension.
         Join the Discord to discuss strategies and compete for the world record.
         The official world record for beating the Wither is less than 6 minutes.
-        Did you know? He is in every world you make.
+        Did you know? It is in every world you make.
         There is no escape.
         Go into the darkness.
         "Rebirth Nearby" may not always be the best option.
@@ -41,6 +41,7 @@ general {
         Support development on Ko-fi!
         In this eternal cycle, you are but fleeting shadows.
         Each step you take is one walked by countless before you, each as insignificant as the last.
+        Read the guide book! It contains crucial information and lore.
      >
 
     # The color of the actual tip text. [default: FFFFFF]
