added recipes to craft tools made from prev tier
added reloadable scripts, removed MT & dimdoors from jei

--- a/config/jei/itemBlacklist.cfg
+++ b/config/jei/itemBlacklist.cfg
@@ -132,6 +132,33 @@ advanced {
         cyclicmagic:charm_antidote
         simpleores:tin_shears
         cyclicmagic:sandstone_sword
+        dimdoors:quartz_door
+        dimdoors:quartz_dimensional_door
+        dimdoors:gold_door
+        dimdoors:gold_dimensional_door
+        dimdoors:iron_dimensional_door
+        dimdoors:oak_dimensional_door
+        dimdoors:stable_fabric
+        dimdoors:unstable_dimensional_door
+        dimdoors:world_thread
+        dimdoors:rift_configuration_tool
+        dimdoors:rift_blade
+        dimdoors:rift_remover
+        dimdoors:rift_signature
+        dimdoors:stabilized_rift_signature
+        dimdoors:rift_stabilizer
+        dimdoors:woven_world_thread_helmet
+        dimdoors:woven_world_thread_chestplate
+        dimdoors:woven_world_thread_leggings
+        dimdoors:woven_world_thread_boots
+        dimdoors:fabric
+        dimdoors:ancient_fabric
+        dimdoors:unravelled_fabric
+        dimdoors:eternal_fabric
+        dimdoors:dimensional_trapdoor
+        dimdoors:record_creepy
+        dimdoors:marking_plate
+        dimdoors:gold_door
      >
 }
 
