--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1511,8 +1511,6 @@ tweaks {
         # Items that a listed entity should follow. The entity must extend EntityLiving.
         # Format is 'modid:entityid;modid:itemid[:meta][,modid:itemid[:meta]]...'. Unset meta will default wildcard.
         S:"Tempt Items" <
-            minecraft:villager;minecraft:emerald_block
-            quark:archaeologist;minecraft:emerald_block,minecraft:bone_block
          >
 
         # Delay in ticks before resetting the task after getting interrupted
@@ -1709,7 +1707,7 @@ vanity {
 
 
 world {
-    B:Archaeologist=true
+    B:Archaeologist=false
     B:Basalt=true
     B:"Big mushrooms generate in swamps"=true
     B:Biotite=true
