--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -10,7 +10,7 @@ general {
         Item descriptions provide vital clues to the progression.
         TREPIDATION's world is filled with mystery and lore. Seek it.
         Each death teaches you something new about TREPIDATION.
-        Don't be afraid to reset your runs to apply skills you've learned.
+        Don't be afraid to reset your runs to apply knowledge you've gained.
         Searching recipes and uses in JEI is vital to progress.
         Progression after the Nether is a placeholder and WIP.
         Some essential progression items are bookmarked in JEI.
