update SRP configs to match old cfg

--- a/config/srparasites/SRParasites.cfg
+++ b/config/srparasites/SRParasites.cfg
@@ -124,7 +124,7 @@
 
 configuration_general {
     # Chance to spawn (1=100%) block drops when broken by parasites. [range: 0.0 ~ 1.0, default: 0.05]
-    S:"Block Drops Spawn"=0.05
+    S:"Block Drops Spawn"=0.0
 
     # Chance to spawn (1=100%) block particles when broken by parasites. [range: 0.0 ~ 1.0, default: 0.05]
     S:"Block Particle Spawn"=0.05
@@ -136,22 +136,21 @@ configuration_general {
     I:"Day Tick Value"=24000
 
     # Global armor multiplier for all the mobs. [range: 0.01 ~ 100.0, default: 1.0]
-    S:"Global Armor Multiplier"=1.0
+    S:"Global Armor Multiplier"=0.25
 
     # Global damage multiplier for all the mobs. [range: 0.01 ~ 100.0, default: 1.0]
-    S:"Global Damage Multiplier"=1.0
+    S:"Global Damage Multiplier"=0.35
 
     # Global health multiplier for all the mobs. [range: 0.01 ~ 100.0, default: 1.0]
-    S:"Global Health Multiplier"=1.0
+    S:"Global Health Multiplier"=0.50
 
     # Parasites can't spawn in these dimensions (This list is ignored if Evolution Phases are enabled, it has its own option)
     I:"Mobs Blacklisted Dimensions" <
-        -1
-        1
+        0
      >
 
     # Set to true if you want to use the list as a WhiteList. [default: false]
-    B:"Mobs Blacklisted Dimensions Inverted"=false
+    B:"Mobs Blacklisted Dimensions Inverted"=true
 
     # Set to false if you want to disable mobs. [default: true]
     B:"Mobs Enabled"=true
@@ -350,15 +349,13 @@ parasite_properties {
 
     # List of mobs that the parasites will no longer attack if "Mob Attacking" is true, Ex: "minecraft:zombie" or just "minecraft" for a whole mod [default: [srmonstress], [minecraft:creeper]]
     S:"Mob Attacking blacklist" <
-        srmonstress
-        minecraft:creeper
      >
 
     # Set to true if you want to use the list as a WhiteList. [default: false]
     B:"Mob Attacking blacklist Inverted"=false
 
     # Parasites will not spawn if local number is greater than this. [range: 0 ~ 50000, default: 40]
-    I:"Mob Cap"=40
+    I:"Mob Cap"=50
 
     # Each Player will increase the mob cap by this value. [range: 0 ~ 50000, default: 5]
     I:"Mob Cap Per Player"=5
@@ -367,7 +364,7 @@ parasite_properties {
     S:"Mob Fire Damage Multiplier"=4.0
 
     # Set to true if the blocks broken by parasites should have drops. [default: true]
-    B:"Mob doTileDrops"=true
+    B:"Mob doTileDrops"=false
 
     # Set to true if you want converted mobs or merged ones to despawn. [default: false]
     B:"Mobs Converted Despawn"=false
