--- a/config/srparasites/SRParasitesSystems.cfg
+++ b/config/srparasites/SRParasitesSystems.cfg
@@ -563,7 +563,7 @@ parasite_evolution_phases {
     B:"Damage Deterrent RS"=true
 
     # Default initial phase value for dimensions. [range: -2 ~ 10, default: -1]
-    I:"Default Phase Start"=-1
+    I:"Default Phase Start"=0
 
     # Default initial points for dimensions. [range: -2147483640 ~ 2147483640, default: -100]
     I:"Default Points Start"=-100
@@ -690,13 +690,10 @@ parasite_evolution_phases {
     #  308 Worm
     #  309 Draconite [default: [1;3;64], [-1;7;309], [0;4;92]]
     S:"Evolution Parasite Lock List" <
-        1;3;64
-        -1;7;309
-        0;4;92
      >
 
     # Message sent to all players when a parasite is unlocked [default: ...]
-    S:"Evolution Parasite Lock Message"=...
+    S:"Evolution Parasite Lock Message"=
 
     # Set to false if you dont want to use evolution phases. [default: true]
     B:"Evolution Phases"=true
@@ -707,18 +704,16 @@ parasite_evolution_phases {
     #  "10" is the number of points parasites will have, if the phase is -1 these points will be negative (Set the points above 0 if the phase is -1 or -2)
     #  Parasites will not spawn and can't earn points if the phase is -2 [default: [-1;-1;50], [0;0;0], [1;-1;100], [270;-1;300]]
     S:"Evolution Phases Dimension Starting Phase List" <
-        -1;-1;50
         0;0;0
-        1;-1;100
-        270;-1;300
      >
 
     # Parasites cannot earn points in these dimensions
     I:"Evolution Phases Point Gain Blacklist" <
+        0
      >
 
     # Set to true if you want to use the list as a WhiteList. [default: false]
-    B:"Evolution Phases Point Gain Blacklist Inverted"=false
+    B:"Evolution Phases Point Gain Blacklist Inverted"=true
 
     # Parasites cannot lose points in these dimensions
     I:"Evolution Phases Point Loss Blacklist" <
@@ -728,16 +723,16 @@ parasite_evolution_phases {
     B:"Evolution Phases Point Loss Blacklist Inverted"=false
 
     # From this phase on, Assimilated versions will stop hiding. [range: 0 ~ 9, default: 5]
-    I:"Phase Assimilation Stop Hiding"=5
+    I:"Phase Assimilation Stop Hiding"=2
 
     # From this phase on, Beckons will ignore their summoning cooldown when spawning. [range: 0 ~ 11, default: 7]
-    I:"Phase Beckon Summoning Cooldown"=7
+    I:"Phase Beckon Summoning Cooldown"=5
 
     # From this phase on, One Mind will be active. [range: -1 ~ 11, default: 5]
-    I:"Phase Collective Consciousness"=5
+    I:"Phase Collective Consciousness"=4
 
     # From this phase on, Colonies are unlocked. [range: 0 ~ 11, default: 5]
-    I:"Phase Colony Unlock"=5
+    I:"Phase Colony Unlock"=6
 
     # From this phase on, Dislodgment System will be active. [range: -1 ~ 11, default: 6]
     I:"Phase Dislodgment System"=6
@@ -764,7 +759,7 @@ parasite_evolution_phases {
     I:"Phase Nest Unlock"=4
 
     # From this phase on, Nodes are unlocked. [range: 0 ~ 11, default: 7]
-    I:"Phase Node Unlock"=7
+    I:"Phase Node Unlock"=5
 
     # From this phase on, Parasites will always spawn as a variant if available. [range: -1 ~ 11, default: 8]
     I:"Phase Parasites Always Variant"=8
@@ -779,7 +774,7 @@ parasite_evolution_phases {
     S:"Phase Parasites Stats Increase Value"=0.07
 
     # From this phase on, Parasites will no longer drop xp. [range: -1 ~ 11, default: 9]
-    I:"Phase Parasites Without XP"=9
+    I:"Phase Parasites Without XP"=-1
 
     # From this phase on, Rupters will stop running away from other mobs and they will directly covert. [range: 0 ~ 11, default: 2]
     I:"Phase Rupter Stop Hiding"=2
@@ -788,7 +783,7 @@ parasite_evolution_phases {
     I:"Phase Sleep Point Multiplier"=6
 
     # From this phase on, all non-parasites mobs will stop spawning naturally. [range: -1 ~ 11, default: 10]
-    I:"Phase Spawning Denied"=10
+    I:"Phase Spawning Denied"=0
 
     # From this phase on, parasites will kill everything (not ignoring config options). [range: -1 ~ 11, default: 8]
     I:"Phase Total Slaughter"=8
@@ -796,30 +791,28 @@ parasite_evolution_phases {
     # Parasites can only gain points overtime in these dimensions
     I:"Points Overtime WhiteList Dimensions" <
         0
-        1
-        -1
      >
 
     # How many points parasites will lose when Infested Blocks type rubble are mined. [range: 0 ~ 1000000, default: 5]
-    I:"Value Loss Block Rubble"=5
+    I:"Value Loss Block Rubble"=0
 
     # How many points parasites will lose when Infested Blocks type stain are mined. [range: 0 ~ 1000000, default: 5]
-    I:"Value Loss Block Stain"=5
+    I:"Value Loss Block Stain"=0
 
     # How many points parasites will lose when Infested Blocks type trunk are mined. [range: 0 ~ 1000000, default: 5]
-    I:"Value Loss Block Trunk"=5
+    I:"Value Loss Block Trunk"=0
 
     # Number of Points gained when a mob with COTH reaches amp +2. [range: 0 ~ 1000000, default: 6]
-    I:"Value for COTH"=6
+    I:"Value for COTH"=1
 
     # Number of Points gained when Adapted versions spawned from moving flesh despawn, set this value to 0 in you dont want adapted to despawn. [range: 0 ~ 1000000, default: 100]
     I:"Value for Despawning"=100
 
     # Number of Points gained when using the merge system to spawn Primitive Parasites. [range: 0 ~ 1000000, default: 10]
-    I:"Value for Merging"=10
+    I:"Value for Merging"=1
 
     # Number of Points gained when converting a block. [range: 0 ~ 1000000, default: 50]
-    I:"Value for blocks"=50
+    I:"Value for blocks"=3
 
     # Number of Points gained each kill. [range: 0 ~ 1000000, default: 1]
     I:"Value for kills"=1
@@ -865,7 +858,7 @@ parasite_evolution_phases_1 {
     S:"Phase 1 Crop Grow Stunned"=0.0
 
     # Parasites will not be able to earn points until this time (seconds) has passed. [range: 0 ~ 2147483640, default: 1200]
-    I:"Phase 1 Delay"=1200
+    I:"Phase 1 Delay"=0
 
     # Each second the killcount will go up by this amount. [range: 0.0 ~ 100.0, default: 0.0]
     S:"Phase 1 Killcount Plus"=0.0
@@ -895,7 +888,7 @@ parasite_evolution_phases_1 {
     S:"Phase 1 Nexus Stage III Grow Stunned"=1.0
 
     # Number of Points required to reach Phase 1. [range: 0 ~ 2147483640, default: 400]
-    I:"Phase 1 Points"=400
+    I:"Phase 1 Points"=50
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.0]
     S:"Phase 1 Reinforcement System Chance"=0.0
@@ -924,7 +917,7 @@ parasite_evolution_phases_1 {
      >
 
     # Message sent to all players in the current world when parasites reach this Phase [default: One]
-    S:"Phase 1 Warning Message"=One
+    S:"Phase 1 Warning Message"=§4Ah, another one enters.
 }
 
 
@@ -936,7 +929,7 @@ parasite_evolution_phases_10 {
     S:"Phase 10 Crop Grow Stunned"=1.0
 
     # Parasites will not be able to earn points until this time (seconds) has passed. [range: 0 ~ 2147483640, default: 1200]
-    I:"Phase 10 Delay"=1200
+    I:"Phase 10 Delay"=0
 
     # Each second the killcount will go up by this amount. [range: 0.0 ~ 100.0, default: 0.55]
     S:"Phase 10 Killcount Plus"=0.55
@@ -966,7 +959,7 @@ parasite_evolution_phases_10 {
     S:"Phase 10 Nexus Stage III Grow Stunned"=0.0
 
     # Number of Points required to reach Phase 10. [range: 0 ~ 2147483640, default: 1800000000]
-    I:"Phase 10 Points"=1800000000
+    I:"Phase 10 Points"=500000
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.2]
     S:"Phase 10 Reinforcement System Chance"=0.2
@@ -1062,7 +1055,7 @@ parasite_evolution_phases_2 {
     S:"Phase 2 Nexus Stage III Grow Stunned"=1.0
 
     # Number of Points required to reach Phase 2. [range: 0 ~ 2147483640, default: 800]
-    I:"Phase 2 Points"=800
+    I:"Phase 2 Points"=200
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.0]
     S:"Phase 2 Reinforcement System Chance"=0.0
@@ -1103,7 +1096,7 @@ parasite_evolution_phases_2 {
      >
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Two]
-    S:"Phase 2 Warning Message"=Two
+    S:"Phase 2 Warning Message"=§4You have come so far just to die.
 }
 
 
@@ -1145,7 +1138,7 @@ parasite_evolution_phases_3 {
     S:"Phase 3 Nexus Stage III Grow Stunned"=0.95
 
     # Number of Points required to reach Phase 3. [range: 0 ~ 2147483640, default: 1800]
-    I:"Phase 3 Points"=1800
+    I:"Phase 3 Points"=1000
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.02]
     S:"Phase 3 Reinforcement System Chance"=0.02
@@ -1191,7 +1184,7 @@ parasite_evolution_phases_3 {
      >
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Three]
-    S:"Phase 3 Warning Message"=Three
+    S:"Phase 3 Warning Message"=§4How amusing, the illusion of control you cling to.
 }
 
 
@@ -1233,7 +1226,7 @@ parasite_evolution_phases_4 {
     S:"Phase 4 Nexus Stage III Grow Stunned"=0.95
 
     # Number of Points required to reach Phase 4. [range: 0 ~ 2147483640, default: 20000]
-    I:"Phase 4 Points"=20000
+    I:"Phase 4 Points"=3000
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.03]
     S:"Phase 4 Reinforcement System Chance"=0.03
@@ -1287,7 +1280,7 @@ parasite_evolution_phases_4 {
      >
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Four]
-    S:"Phase 4 Warning Message"=Four
+    S:"Phase 4 Warning Message"=§4Did you really think you had a chance, Runner?
 }
 
 
@@ -1329,7 +1322,7 @@ parasite_evolution_phases_5 {
     S:"Phase 5 Nexus Stage III Grow Stunned"=0.95
 
     # Number of Points required to reach Phase 5. [range: 0 ~ 2147483640, default: 200000]
-    I:"Phase 5 Points"=200000
+    I:"Phase 5 Points"=5000
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.04]
     S:"Phase 5 Reinforcement System Chance"=0.04
@@ -1380,7 +1373,7 @@ parasite_evolution_phases_5 {
      >
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Five]
-    S:"Phase 5 Warning Message"=Five
+    S:"Phase 5 Warning Message"=§4Might I remind you... there is no escape.
 }
 
 
@@ -1422,7 +1415,7 @@ parasite_evolution_phases_6 {
     S:"Phase 6 Nexus Stage III Grow Stunned"=0.0
 
     # Number of Points required to reach Phase 6. [range: 0 ~ 2147483640, default: 5000000]
-    I:"Phase 6 Points"=5000000
+    I:"Phase 6 Points"=20000
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.05]
     S:"Phase 6 Reinforcement System Chance"=0.05
@@ -1479,7 +1472,7 @@ parasite_evolution_phases_6 {
      >
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Six]
-    S:"Phase 6 Warning Message"=Six
+    S:"Phase 6 Warning Message"=§4Why do you continue so persistently? Give up and die.
 }
 
 
@@ -1521,7 +1514,7 @@ parasite_evolution_phases_7 {
     S:"Phase 7 Nexus Stage III Grow Stunned"=0.0
 
     # Number of Points required to reach Phase 7. [range: 0 ~ 2147483640, default: 25000000]
-    I:"Phase 7 Points"=25000000
+    I:"Phase 7 Points"=50000
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.07]
     S:"Phase 7 Reinforcement System Chance"=0.07
@@ -1572,7 +1565,7 @@ parasite_evolution_phases_7 {
      >
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Seven]
-    S:"Phase 7 Warning Message"=Seven
+    S:"Phase 7 Warning Message"=§4My creations only grow stronger the longer you are here. You have no hope.
 }
 
 
@@ -1614,7 +1607,7 @@ parasite_evolution_phases_8 {
     S:"Phase 8 Nexus Stage III Grow Stunned"=0.0
 
     # Number of Points required to reach Phase 8. [range: 0 ~ 2147483640, default: 500000000]
-    I:"Phase 8 Points"=500000000
+    I:"Phase 8 Points"=200000
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.09]
     S:"Phase 8 Reinforcement System Chance"=0.09
@@ -1665,7 +1658,7 @@ parasite_evolution_phases_8 {
      >
 
     # Message sent to all players in the current world when parasites reach this Phase [default: Eight]
-    S:"Phase 8 Warning Message"=Eight
+    S:"Phase 8 Warning Message"=§4Time is running out. Your death will be swift and painful.
 }
 
 
@@ -1707,7 +1700,7 @@ parasite_evolution_phases_9 {
     S:"Phase 9 Nexus Stage III Grow Stunned"=0.0
 
     # Number of Points required to reach Phase 9. [range: 0 ~ 2147483640, default: 1000000000]
-    I:"Phase 9 Points"=1000000000
+    I:"Phase 9 Points"=400000
 
     # Chance to spawn a Beckon when a parasite is killed. [range: 0.0 ~ 1.0, default: 0.2]
     S:"Phase 9 Reinforcement System Chance"=0.2
