--- a/config/srparasites/SRParasitesWorld.cfg
+++ b/config/srparasites/SRParasitesWorld.cfg
@@ -144,13 +144,13 @@ world_biome {
     S:"Biome Tree chance"=0.0015
 
     # Biome weight, registered as a SPOOKY type biome [range: 0 ~ 10000, default: 0]
-    I:"Biome Weight"=0
+    I:"Biome Weight"=1000
 
     # Set to false if you dont want Nodes to be created in your world. [default: true]
     B:"Creation of Nodes"=true
 
     # Maximum number of nodes in a world. [range: 1 ~ 100, default: 20]
-    I:"Maximum Node Number"=20
+    I:"Maximum Node Number"=90
 
     # Minimum distance that one node needs to be away from the other to appear. [range: 0 ~ 100000000, default: 10000]
     I:"Minimum Distance Between Nodes"=10000
@@ -168,7 +168,7 @@ world_biome {
     I:"Node 1 Spread Range"=200
 
     # Days needed from a sss to a Node 1. [range: 0 ~ 2147483640, default: 8]
-    I:"Node 1 Time Needed"=8
+    I:"Node 1 Time Needed"=1
 
     # Chance (1 = 100%) to stop crops/trees from growing naturally.(for a tick) for a Node 2 [range: 0.0 ~ 100.0, default: 0.6]
     S:"Node 2 Crop Stop"=0.6
@@ -180,7 +180,7 @@ world_biome {
     I:"Node 2 Spread Range"=800
 
     # Days needed from a Node 1 to a Node 2. [range: 0 ~ 2147483640, default: 10]
-    I:"Node 2 Time Needed"=10
+    I:"Node 2 Time Needed"=1
 
     # Chance (1 = 100%) to stop crops/trees from growing naturally.(for a tick) for a Node 3 [range: 0.0 ~ 100.0, default: 1.0]
     S:"Node 3 Crop Stop"=1.0
@@ -192,7 +192,7 @@ world_biome {
     I:"Node 3 Spread Range"=4000
 
     # Days needed from a Node 2 to a Node 3. [range: 0 ~ 2147483640, default: 40]
-    I:"Node 3 Time Needed"=40
+    I:"Node 3 Time Needed"=1
 
     # List of potion effects that the parasites will spawn with. Ex. "2;minecraft:speed;3"  Where: 
     #  "2" is the required total of node levels, 
@@ -213,8 +213,6 @@ world_biome {
     # Nodes can only be made in these dimensions
     I:"WhiteList Dimensions" <
         0
-        1
-        -1
      >
 }
 
@@ -229,22 +227,22 @@ world_biome {
 
 world_colony {
     # Set to false if you dont want Colonies to be created in your world. [default: false]
-    B:"Colonies Activated"=false
+    B:"Colonies Activated"=true
 
     # Value of the base effect radius of a Colony. [range: 1 ~ 10000, default: 120]
     I:"Colonies Base Effect Radius Value"=120
 
     # Value of the base radius of a Colony. [range: 1 ~ 10000, default: 60]
-    I:"Colonies Base Radius Value"=60
+    I:"Colonies Base Radius Value"=1000
 
     # Set to false if you dont want Colonies to be created by a Dispatcher SIV. (This option is ignored if Evolution Phases are enabled, it has its own option) [default: true]
     B:"Colonies Dispatcher"=true
 
     # Distance from the colony to which they are going to start setting up Outposts. [range: 1 ~ 10000000, default: 2000]
-    I:"Colonies Outpost Distance"=2000
+    I:"Colonies Outpost Distance"=300
 
     # Cap of points for a single Colony. [range: 1 ~ 10000, default: 100]
-    I:"Colonies Points Cap"=100
+    I:"Colonies Points Cap"=10000
 
     # Every x points, the colony effect radius will get bigger. [range: 1 ~ 10000, default: 1]
     I:"Colonies Spread Effect Point"=1
@@ -329,16 +327,14 @@ world_colony {
     S:"Colony RS Extra Chance Value"=1.0
 
     # Maximum number of Colonies in a world. [range: 1 ~ 100, default: 20]
-    I:"Maximum Colony Number"=20
+    I:"Maximum Colony Number"=90
 
     # Minimum distance that one Colony needs to be away from the other to appear. [range: 0 ~ 100000000, default: 2000]
-    I:"Minimum Distance Between Colonies"=2000
+    I:"Minimum Distance Between Colonies"=100
 
     # Colonies can only be made in these dimensions
     I:"WhiteList Dimensions" <
         0
-        1
-        -1
      >
 }
 
