--- a/config/rlmixins.cfg
+++ b/config/rlmixins.cfg
@@ -147,7 +147,7 @@ general {
         # Radius of spawn chunks to keep loaded in memory (-1 to load none, requires Spawn Chunk Radius Patch)
         # Min: -1
         # Max: 8
-        I:"Spawn Chunk Radius"=0
+        I:"Spawn Chunk Radius"=-1
 
         # Every x ticks Spriggans attempt growing crops around them
         I:"Spriggan Farming Rate"=20
@@ -259,7 +259,7 @@ general {
         B:"Cache WorldBorder currentTime (Vanilla)"=false
 
         # Cancels SRParasites manually packet handling for reach bonuses
-        B:"Cancel Parasite Reach Packet (SRParasites)"=false
+        B:"Cancel Parasite Reach Packet (SRParasites)"=true
 
         # Stops CarryOn from being able to pickup pigs that still have saddles equipped, cows and squids with cooldown, or dead entities
         B:"CarryOn Pig Saddle Patch (CarryOn)"=false
@@ -334,7 +334,7 @@ general {
         B:"DynamicTrees AABB Cache (DynamicTrees)"=false
 
         # Modifies EnhancedVisual's death messages to be translatable
-        B:"EV Death Message Translation (EnhancedVisuals)"=true
+        B:"EV Death Message Translation (EnhancedVisuals)"=false
 
         # Skips checking oversized AABB for collisions when teleporting long distances, causing extreme lag.
         B:"EXPERIMENTAL: Teleporting Lag Patch (Vanilla)"=false
@@ -481,10 +481,10 @@ general {
         B:"Parasite Cleaver Effect Config (SRParasites)"=false
 
         # Makes parasite spawning ignore all light level if the ignore sunlight option is true.
-        B:"Parasite Light Level (SRParasites)"=false
+        B:"Parasite Light Level (SRParasites)"=true
 
         # Cancels Parasites attempting to run a custom spawn tick check. (Seems to help performance/spawning)
-        B:"Parasite Spawn Fix (SRParasites)"=false
+        B:"Parasite Spawn Fix (SRParasites)"=true
 
         # Sets particles by default to not do collision checks, unless defined in the relevant config setting
         B:"Particle Collision Defaults (Vanilla)"=false
@@ -577,13 +577,13 @@ general {
         B:"Slowed Item Entity Movement (Vanilla)"=false
 
         # Smooth eye height when crouching, created by RandomPatches
-        B:"Smoothed Crouching (Vanilla)"=true
+        B:"Smoothed Crouching (Vanilla)"=false
 
         # Modifies SoManyEnchantments to fix a crash with TickDynamic, and improve performance
         B:"SoManyEnchantments TickDynamic Crash (SoManyEnchantments)"=false
 
         # Modifies the radius of spawn chunks to keep loaded even when a player is not near
-        B:"Spawn Chunk Radius Patch (Vanilla)"=false
+        B:"Spawn Chunk Radius Patch (Vanilla)"=true
 
         # Modifies Spriggans to properly allow changing the farming growth rate
         B:"Spriggan Growth Rate Override (LycanitesMobs)"=false
