Implement Elara's Journal w/ 2 entries [textures needed]
- Dreadswine entry
- Trace of death entry
- Added guidebook texture
- Player data is now reset between runs

--- a/config/legendarytooltips.cfg
+++ b/config/legendarytooltips.cfg
@@ -70,6 +70,7 @@ definitions {
         quark:soul_compass
         contenttweaker:soul_anchor
         corpsecomplex:scroll
+        %Entry
      >
 
     #  [default: ]
@@ -90,6 +91,7 @@ definitions {
         mysticstaffs:heal_staff
         contenttweaker:deviled_egg_sandwich
         %Infernium
+        %Veilstrium
         artifacts:shiny_red_balloon
         artifacts:flame_pendant
         %Ghast
