--- a/config/srparasites/SRParasitesWorld.cfg
+++ b/config/srparasites/SRParasitesWorld.cfg
@@ -205,7 +205,7 @@ world_biome {
      >
 
     # Message sent to all players in the current world when a Node is placed [default: Node]
-    S:"Node Warning Message"=Node
+    S:"Node Warning Message"=
 
     # Set to false if you dont want Colonies to be created by a Beckon SIV. (This option is ignored if Evolution Phases are enabled, it has its own option) [default: true]
     B:"Nodes Beckons"=true
