--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -33,6 +33,7 @@ reroll {
         gamestage silentremove @p erebus
         gamestage silentremove @p deepdark
         gamestage silentremove @p surface
+        gamestage silentremove @p dreadswine_entry
         srpevolution phase_0
         scoreboard objectives remove timerbonus
         scoreboard objectives add timerbonus dummy
