grimoire of the veil guidebook entry

--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -41,7 +41,7 @@ general {
         Support development on Ko-fi!
         In this eternal cycle, you are but fleeting shadows.
         Each step you take is one walked by countless before you, each as insignificant as the last.
-        Read the guide book! It contains crucial information and lore.
+        Read your Journal! It contains crucial information and lore.
      >
 
     # The color of the actual tip text. [default: FFFFFF]
