Add foulite dust entry

--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -34,6 +34,7 @@ reroll {
         gamestage silentremove @p deepdark
         gamestage silentremove @p surface
         gamestage silentremove @p dreadswine_entry
+        gamestage silentremove @p foulite_dust_entry
         srpevolution phase_0
         scoreboard objectives remove timerbonus
         scoreboard objectives add timerbonus dummy
