Lore accurate Dreadswine be like:

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1511,6 +1511,7 @@ tweaks {
         # Items that a listed entity should follow. The entity must extend EntityLiving.
         # Format is 'modid:entityid;modid:itemid[:meta][,modid:itemid[:meta]]...'. Unset meta will default wildcard.
         S:"Tempt Items" <
+            minecraft:zombie_pigman;corpsecomplex:scroll,contenttweaker:dreadstone_fragment
          >
 
         # Delay in ticks before resetting the task after getting interrupted
