--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -35,6 +35,7 @@ reroll {
         gamestage silentremove @p surface
         gamestage silentremove @p dreadswine_entry
         gamestage silentremove @p foulite_dust_entry
+        gamestage silentremove @p nether_wraith_entry
         srpevolution phase_0
         scoreboard objectives remove timerbonus
         scoreboard objectives add timerbonus dummy
