--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -36,6 +36,7 @@ reroll {
         gamestage silentremove @p dreadswine_entry
         gamestage silentremove @p foulite_dust_entry
         gamestage silentremove @p nether_wraith_entry
+        gamestage silentremove @p veilstrium_entry
         srpevolution phase_0
         scoreboard objectives remove timerbonus
         scoreboard objectives add timerbonus dummy
