--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -37,6 +37,7 @@ reroll {
         gamestage silentremove @p foulite_dust_entry
         gamestage silentremove @p nether_wraith_entry
         gamestage silentremove @p veilstrium_entry
+        gamestage silentremove @p infernium_entry
         srpevolution phase_0
         scoreboard objectives remove timerbonus
         scoreboard objectives add timerbonus dummy
