add glowood entry, fix dropt values

--- a/config/reroll.cfg
+++ b/config/reroll.cfg
@@ -38,6 +38,7 @@ reroll {
         gamestage silentremove @p nether_wraith_entry
         gamestage silentremove @p veilstrium_entry
         gamestage silentremove @p infernium_entry
+        gamestage silentremove @p glowood_entry
         srpevolution phase_0
         scoreboard objectives remove timerbonus
         scoreboard objectives add timerbonus dummy
