--- a/config/mowziesmobs.cfg
+++ b/config/mowziesmobs.cfg
@@ -30,7 +30,6 @@ mobs {
         generation_data {
             # IDs of dimensions this mob/structure can generate in
             I:dimensions <
-                0
              >
 
             # Probability that generation succeeds.
@@ -38,13 +37,13 @@ mobs {
             # Set to 1 to allow all generation attempts to succeed.
             # Min: 0.0
             # Max: 1.0
-            D:generation_chance=0.0
+            D:generation_chance=0.800000011920929
 
             # Smaller number causes more generation, 0 to disable spawning
             # Maximum number of chunks between placements of this mob/structure
             # Min: 1
             # Max: 1000
-            I:generation_frequency=0
+            I:generation_frequency=12
 
             # Maximum height for generation placement. -1 to ignore
             # Min: -1.0
@@ -115,7 +114,6 @@ mobs {
         generation_data {
             # IDs of dimensions this mob/structure can generate in
             I:dimensions <
-                0
              >
 
             # Probability that generation succeeds.
@@ -129,7 +127,7 @@ mobs {
             # Maximum number of chunks between placements of this mob/structure
             # Min: 1
             # Max: 1000
-            I:generation_frequency=0
+            I:generation_frequency=12
 
             # Maximum height for generation placement. -1 to ignore
             # Min: -1.0
@@ -199,7 +197,6 @@ mobs {
         generation_data {
             # IDs of dimensions this mob/structure can generate in
             I:dimensions <
-                10
              >
 
             # Probability that generation succeeds.
@@ -286,7 +283,6 @@ mobs {
 
             # IDs of dimensions this mob can spawn in
             I:dimensions <
-                0
              >
 
             # Maximum height for this spawn. -1 to ignore.
@@ -321,7 +317,7 @@ mobs {
             # Smaller number causes less spawning, 0 to disable spawning
             # Min: 0
             # Max: 100
-            I:spawn_rate=0
+            I:spawn_rate=2
 
             ##########################################################################################################
             # biome_data
@@ -370,12 +366,15 @@ mobs {
         spawn_data {
             # Names of blocks this mob is allowed to spawn on. Leave blank to allow any block.
             S:allowed_blocks <
-                
+                grass
+                leaves
+                leaves2
+                log
+                log2
              >
 
             # IDs of dimensions this mob can spawn in
             I:dimensions <
-                10
              >
 
             # Maximum height for this spawn. -1 to ignore.
@@ -386,7 +385,7 @@ mobs {
             # Minimum height for this spawn. -1 to ignore.
             # Min: -1.0
             # Max: 255.0
-            D:height_min=-1
+            D:height_min=60.0
 
             # Maximum number of mobs that appear in a spawn group
             # Min: 1
@@ -410,7 +409,7 @@ mobs {
             # Smaller number causes less spawning, 0 to disable spawning
             # Min: 0
             # Max: 100
-            I:spawn_rate=0
+            I:spawn_rate=5
 
             ##########################################################################################################
             # biome_data
@@ -430,11 +429,13 @@ mobs {
                 # For example, 'FOREST,MAGICAL,!SNOWY' would mean all biomes that are magical forests but not snowy
                 # '!MOUNTAIN' would mean all non-mountain biomes
                 S:biome_type <
+                    FOREST,MAGICAL,!SNOWY
                  >
 
                 # Allow spawns in these biomes regardless of the biome type settings
                 S:biome_whitelist <
-                    
+                    roofed_forest
+                    mutated_roofed_forest
                  >
             }
 
@@ -456,11 +457,13 @@ mobs {
         spawn_data {
             # Names of blocks this mob is allowed to spawn on. Leave blank to allow any block.
             S:allowed_blocks <
+                grass
+                stone
+                sand
              >
 
             # IDs of dimensions this mob can spawn in
             I:dimensions <
-                0
              >
 
             # Maximum height for this spawn. -1 to ignore.
@@ -495,7 +498,7 @@ mobs {
             # Smaller number causes less spawning, 0 to disable spawning
             # Min: 0
             # Max: 100
-            I:spawn_rate=0
+            I:spawn_rate=4
 
             ##########################################################################################################
             # biome_data
@@ -557,7 +560,6 @@ mobs {
 
             # IDs of dimensions this mob can spawn in
             I:dimensions <
-                0
              >
 
             # Maximum height for this spawn. -1 to ignore.
@@ -592,7 +594,7 @@ mobs {
             # Smaller number causes less spawning, 0 to disable spawning
             # Min: 0
             # Max: 100
-            I:spawn_rate=0
+            I:spawn_rate=3
 
             ##########################################################################################################
             # biome_data
@@ -649,12 +651,15 @@ mobs {
         spawn_data {
             # Names of blocks this mob is allowed to spawn on. Leave blank to allow any block.
             S:allowed_blocks <
-                
+                grass
+                leaves
+                leaves2
+                log
+                log2
              >
 
             # IDs of dimensions this mob can spawn in
             I:dimensions <
-                5
              >
 
             # Maximum height for this spawn. -1 to ignore.
@@ -689,7 +694,7 @@ mobs {
             # Smaller number causes less spawning, 0 to disable spawning
             # Min: 0
             # Max: 100
-            I:spawn_rate=0
+            I:spawn_rate=20
 
             ##########################################################################################################
             # biome_data
@@ -737,6 +742,9 @@ mobs {
 
 
 tools_and_abilities {
+    # Set to false to disable geomancy tunneling.
+    B:enable_tunneling=true
+
     # Min: 0.0
     # Max: 100.0
     D:geomancy_attack_multiplier=1.0
