--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -23,7 +23,7 @@ general {
         Double jump to stop fall damage.
         Most foods in the Nether provide beneficial effects.
         Magma eggs and fire charges can be thrown.
-        A Ghast Bomb can be crafted to explode blocks.
+        A Nether Wraith Bomb can be crafted to explode blocks.
         You can wall hang by holding shift on a wall.
         Pickaxes, torches, and a few other items never drop on death.
         Craft a backpack before you head into the Erebus.
