--- a/config/smoothfont/smoothfont.cfg
+++ b/config/smoothfont/smoothfont.cfg
@@ -69,7 +69,7 @@ common {
     I:overlayLodBias=-5
 
     # Prioritize performance rather than quality.
-    B:performanceMode=false
+    B:performanceMode=true
 
     # Enable odd multiple GUI scale factors (x3,x5,...) when using unicode font.
     B:removeScaleRestriction=true
@@ -129,7 +129,7 @@ font {
     I:fontEmphasis=0
 
     # OS font resolution. (0:8px, 1:10px, 2:12px, 3:16px, 4:24px, 5:32px, 6:48px, 7:64px)
-    I:fontResolution=7
+    I:fontResolution=6
 
     # Enable automatic font size detection for the font resolution.
     B:fontAutoSizing=true
