disable some quark stuff

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -199,7 +199,7 @@ building {
     B:"Soul sandstone"=true
     B:"Stained planks"=true
     B:"Sturdy stone"=true
-    B:"Sugar cane blocks"=true
+    B:"Sugar cane blocks"=false
     B:Thatch=true
     B:Trowel=true
     B:Turf=true
@@ -545,10 +545,10 @@ client {
 
 decoration {
     # Adds the colored flower pot features of supporting additional flowers and comparator power to the vanilla flower pot using a block substitution
-    B:"Better vanilla flower pot"=true
+    B:"Better vanilla flower pot"=false
     B:"Blaze lantern"=true
-    B:"Charcoal block"=true
-    B:"Colored flower pots"=true
+    B:"Charcoal block"=false
+    B:"Colored flower pots"=false
     B:"Colored item frames"=true
     B:"Flat item frames"=true
     B:"Glass item frame"=true
@@ -559,9 +559,9 @@ decoration {
     B:"More banner layers"=true
     B:"More banners"=true
     B:"Nether brick fence gate"=true
-    B:"Paper lantern"=true
-    B:"Paper wall"=true
-    B:"Place blaze rods"=true
+    B:"Paper lantern"=false
+    B:"Paper wall"=false
+    B:"Place blaze rods"=false
     B:Rope=true
     B:"Tallow and candles"=true
     B:"Tie fences"=true
@@ -1389,7 +1389,7 @@ tweaks {
     B:"Dye any wool"=true
     B:"Endermen anti cheese"=true
     B:"Entities chase players holding certain items"=true
-    B:"Glass shards"=true
+    B:"Glass shards"=false
     B:"Hoes break a 5x5 of plants"=true
     B:"Improved sleeping"=true
     B:"Jump boost allows to step up 1 block"=true
