downgrade SRP (fixes no modded mobs spawning)

--- a/config/rlmixins.cfg
+++ b/config/rlmixins.cfg
@@ -259,7 +259,7 @@ general {
         B:"Cache WorldBorder currentTime (Vanilla)"=false
 
         # Cancels SRParasites manually packet handling for reach bonuses
-        B:"Cancel Parasite Reach Packet (SRParasites)"=true
+        B:"Cancel Parasite Reach Packet (SRParasites)"=false
 
         # Stops CarryOn from being able to pickup pigs that still have saddles equipped, cows and squids with cooldown, or dead entities
         B:"CarryOn Pig Saddle Patch (CarryOn)"=false
@@ -481,10 +481,10 @@ general {
         B:"Parasite Cleaver Effect Config (SRParasites)"=false
 
         # Makes parasite spawning ignore all light level if the ignore sunlight option is true.
-        B:"Parasite Light Level (SRParasites)"=true
+        B:"Parasite Light Level (SRParasites)"=false
 
         # Cancels Parasites attempting to run a custom spawn tick check. (Seems to help performance/spawning)
-        B:"Parasite Spawn Fix (SRParasites)"=true
+        B:"Parasite Spawn Fix (SRParasites)"=false
 
         # Sets particles by default to not do collision checks, unless defined in the relevant config setting
         B:"Particle Collision Defaults (Vanilla)"=false
@@ -553,7 +553,7 @@ general {
         B:"Remove Water Chunk Gen Ticking (Vanilla)"=true
 
         # Replaces SRParasites Living and Sentient armor models with custom models
-        B:"Replace Parasite Armor Models (SRParasites)"=true
+        B:"Replace Parasite Armor Models (SRParasites)"=false
 
         # Fix Reskillable cancelling indirect self damage
         B:"Reskillable Indirect Self Damage Patch (Reskillable)"=false
