update quark, death totem glows, backpack improvements

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -344,6 +344,7 @@ client {
     B:"Creepers turn red when they're exploding"=true
     B:"Enchanted books show items"=true
     B:"Food tooltip"=true
+    B:"Glowing items"=false
     B:"Greener grass"=true
     B:"Improved mount h u d"=true
     B:"Improved sign edit"=true
@@ -538,6 +539,16 @@ client {
         B:"Enable Observer"=true
         B:"Enable Piston Models"=true
         B:"Enable Pumpkin Front Face"=false
+    }
+
+    "glowing items" {
+        # Items that should glow when near the player
+        # Format is modid:item[:meta]
+        S:"Glowing Items" <
+         >
+
+        # The maximum distance from the player at which items will glow. Default is 32 blocks
+        D:"Maximum Distance"=32.0
     }
 
 }
@@ -1242,6 +1253,9 @@ oddities {
         B:"Should Holding Blacklist Be Whitelist"=false
         B:"Spawn Totem on PVP Kill"=true
 
+        # Maximum range at which totems visibly glow. Default is 32; set to 0 to disable
+        D:"Totem Glow Range"=128.0
+
         # Displayed scale of the totem of holding entity
         D:"Totem of Holding Entity Scale"=3.0
     }
@@ -1345,6 +1359,9 @@ oddities {
     }
 
     backpacks {
+        # Set this to true to allow items to be picked up into backpacks when the main inventory is full
+        B:"Enable Backpack Pick-Up"=true
+
         # Set this to true to enable a crafting recipe
         B:"Enable Crafting"=false
 
