--- a/config/rltweaker.cfg
+++ b/config/rltweaker.cfg
@@ -186,6 +186,9 @@ general {
         # Enables Entity Block Destroy Blacklist
         B:patchEntityBlockDestroy=false
 
+        # Replaces the animation loader from FancyMenu with a faster alternative which also reduces memory usage significantly.
+        B:patchFMAnimationLoading=true
+
         # Fixes falling block portal dupe.
         B:patchFallingBlockPortalDupe=true
 
