--- a/config/tips.cfg
+++ b/config/tips.cfg
@@ -33,9 +33,7 @@ general {
         Did you know? It is in every world you make.
         There is no escape.
         Go into the darkness.
-        "Rebirth Nearby" may not always be the best option.
-        "Rebirth Nearby" spawns you 50-75 blocks from your last death.
-        If you die within 20s of using "Rebirth Nearby", that option will be locked.
+        Check points occur after accessing new dimensions and before every major boss.
         Review TREPIDATION on mmcreviews.com!
         Watch the trailer for TREPIDATION on YouTube!
         Support development on Ko-fi!
