--- a/config/jei/jei.cfg
+++ b/config/jei/jei.cfg
@@ -9,25 +9,25 @@
 ##########################################################################################################
 
 advanced {
-    # When true, adds new bookmarks to the front of the bookmark list. When false, adds new bookmarks to the end of the bookmark list. [default: true]
+    # Add new bookmarks to the front of the bookmark list instead of the end. [default: true]
     B:addBookmarksToFront=false
 
     # Move the JEI search bar to the bottom center of the screen. [default: false]
     B:centerSearchBarEnabled=false
     B:debugModeEnabled=false
 
-    # Choose if JEI should give ingredients direct to the inventory (inventory) or pick them up with the mouse (mouse_pickup).
+    # Choose if JEI should give ingredients directly to the inventory or pick them up with the mouse.
     # [Default: mouse_pickup]
     # [Valid: [inventory, mouse_pickup]]
     S:giveMode=inventory
 
-    # The maximum width of the ingredient list. [range: 4 ~ 100, default: 100]
+    # The maximum width of the ingredient and bookmark list overlays. [range: 4 ~ 100, default: 100]
     I:maxColumns=100
 
     # The maximum height of the recipe GUI. [range: 175 ~ 5000, default: 350]
     I:maxRecipeGuiHeight=350
 
-    # How the mod name should be formatted in the tooltip for JEI GUIs. Leave blank to disable. [Default: blue italic] [Valid: [black, dark_blue, dark_green, dark_aqua, dark_red, dark_purple, gold, gray, dark_gray, blue, green, aqua, red, light_purple, yellow, white, obfuscated, bold, strikethrough, underline, italic]]
+    # Formatting for the mod names in tooltips for JEI GUIs. Leave blank to disable. [Default: blue italic] [Valid: [black, dark_blue, dark_green, dark_aqua, dark_red, dark_purple, gold, gray, dark_gray, blue, green, aqua, red, light_purple, yellow, white, obfuscated, bold, strikethrough, underline, italic]]
     S:modNameFormat=
 
     # Enable JEI memory usage optimizations. [default: true]
@@ -38,36 +38,36 @@ advanced {
 ##########################################################################################################
 # search
 #--------------------------------------------------------------------------------------------------------#
-# Options relating to the search bar.
+# Options related to the search bar.
 ##########################################################################################################
 
 search {
-    # Search mode for Colors (prefix: ^)
+    # Search mode for colors (prefix: ^).
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
     S:colorSearchMode=DISABLED
 
-    # Search mode for Creative Tab Names (prefix: %)
+    # Search mode for creative mode tab names (prefix: %).
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
     S:creativeTabSearchMode=DISABLED
 
-    # Search mode for Mod Names (prefix: @)
+    # Search mode for mod names (prefix: @).
     # [Default: require_prefix]
     # [Valid: [enabled, require_prefix, disabled]]
     S:modNameSearchMode=REQUIRE_PREFIX
 
-    # Search mode for Ore Dictionary Names (prefix: $)
+    # Search mode for Ore Dictionary names (prefix: $).
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
     S:oreDictSearchMode=enabled
 
-    # Search mode for resources ids (prefix: &)
+    # Search mode for resource IDs (prefix: &).
     # [Default: disabled]
     # [Valid: [enabled, require_prefix, disabled]]
     S:resourceIdSearchMode=DISABLED
 
-    # Search mode for Tooltips (prefix: #)
+    # Search mode for tooltips (prefix: #).
     # [Default: enabled]
     # [Valid: [enabled, require_prefix, disabled]]
     S:tooltipSearchMode=ENABLED
